--- a/Desktop/Livraria-master/Livraria-master/iReport/RelatorioLivraria.jrxml
+++ b/Desktop/Livraria-master/Livraria-master/iReport/RelatorioLivraria.jrxml
@@ -2,9 +2,9 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="RelatorioLivraria" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="7e2ed6f8-c50d-4cc1-a38a-971406517231">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="33"/>
 	<queryString>
-		<![CDATA[SELECT nivel, nome, login FROM usuarios ORDER BY nivel]]>
+		<![CDATA[SELECT nivel as "Nível", nome as "Nome", login as "Login" FROM usuarios ORDER BY nivel]]>
 	</queryString>
 	<field name="nivel" class="java.lang.Integer"/>
 	<field name="nome" class="java.lang.String"/>
@@ -30,29 +30,29 @@
 		<band height="55" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="42" splitType="Stretch">
 			<staticText>
 				<reportElement x="42" y="0" width="100" height="20" uuid="5780a9a3-a44e-400c-9721-4d3c9b98a9b0"/>
-				<text><![CDATA[nivel]]></text>
+				<text><![CDATA[Nível]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="175" y="0" width="100" height="20" uuid="d60ec123-a634-4e71-82ec-66f537016b0b"/>
-				<text><![CDATA[nomes]]></text>
+				<reportElement x="227" y="0" width="100" height="20" uuid="d60ec123-a634-4e71-82ec-66f537016b0b"/>
+				<text><![CDATA[Nome]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="348" y="0" width="100" height="20" uuid="eff60e59-5b4c-41f7-bddf-3e52fba43dbd"/>
-				<text><![CDATA[login]]></text>
+				<reportElement x="417" y="0" width="100" height="20" uuid="eff60e59-5b4c-41f7-bddf-3e52fba43dbd"/>
+				<text><![CDATA[Login]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="29" splitType="Stretch">
 			<textField>
-				<reportElement x="175" y="0" width="100" height="20" uuid="3851817a-3b19-4f3e-9ea9-91c0a76abbd7"/>
+				<reportElement x="227" y="0" width="100" height="20" uuid="3851817a-3b19-4f3e-9ea9-91c0a76abbd7"/>
 				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="348" y="0" width="100" height="20" uuid="bc151110-22a3-4a6f-b6d8-32fde1251a52"/>
+				<reportElement x="417" y="0" width="100" height="20" uuid="bc151110-22a3-4a6f-b6d8-32fde1251a52"/>
 				<textFieldExpression><![CDATA[$F{login}]]></textFieldExpression>
 			</textField>
 			<textField>
